Implement a fedora to solr connector make deployable for OSGi and a web container
Resolves https://jira.duraspace.org/browse/FCREPO-1466